Make Tabify icon on login page static. Change image.  Fix issue where image was being cut off on iPhone X notch.

--- a/src/pages/unauthenticated/unauthenticated.scss
+++ b/src/pages/unauthenticated/unauthenticated.scss
@@ -1,102 +1,116 @@
 page-unauthenticated {
-    @mixin vendor-prefix($name, $value) {
-        @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
-            #{$vendor}#{$name}: #{$value};
-        }
+  @mixin vendor-prefix($name, $value) {
+    @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
+      #{$vendor}#{$name}: #{$value};
     }
-    @mixin animation ($name, $duration, $iteration-count, $timing-function, $direction) {
-        @include vendor-prefix('animation-name', $name);
-        @include vendor-prefix('animation-duration', $duration);
-        @include vendor-prefix('animation-iteration-count', $iteration-count);
-        @include vendor-prefix('animation-timing-function', $timing-function);
-        @include vendor-prefix('animation-direction', $direction);
+  }
+  @mixin animation(
+    $name,
+    $duration,
+    $iteration-count,
+    $timing-function,
+    $direction
+  ) {
+    @include vendor-prefix('animation-name', $name);
+    @include vendor-prefix('animation-duration', $duration);
+    @include vendor-prefix('animation-iteration-count', $iteration-count);
+    @include vendor-prefix('animation-timing-function', $timing-function);
+    @include vendor-prefix('animation-direction', $direction);
+  }
+  @mixin keyframe($animation_name) {
+    @-webkit-keyframes #{$animation_name} {
+      @content;
     }
-    @mixin keyframe ($animation_name) {
-        @-webkit-keyframes #{$animation_name} {
-            @content;
-        }
-        @-moz-keyframes #{$animation_name} {
-            @content;
-        }
-        @-o-keyframes #{$animation_name} {
-            @content;
-        }
-        @keyframes #{$animation_name} {
-            @content;
-        }
+    @-moz-keyframes #{$animation_name} {
+      @content;
     }
-    ion-content {
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        background-size: cover;  
-        h1, h4 {
-            font-weight: 400;
+    @-o-keyframes #{$animation_name} {
+      @content;
+    }
+    @keyframes #{$animation_name} {
+      @content;
+    }
+  }
+  ion-content {
+    position: relative;
+    &::before {
+      width: 100%;
+      height: 100%;
+      content: '';
+      position: absolute;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      background-color: black;
+      @media (min-width: 700px) {
+        background-image: url(../../assets/imgs/login/img1.png);
+      }
+      background-image: url(../../assets/imgs/login/supercompressed_img0.jpg);
+      background-position: center center;
+      background-repeat: no-repeat;
+      will-change: transform;
+      @include vendor-prefix('transition', background-image 0.2s linear);
+      @include vendor-prefix('filter', brightness(50%) grayscale(20%));
+      @include animation(move, 15s, infinite, linear, alternate-reverse);
+      @include keyframe(move) {
+        from {
+          transform: scale(1.2, 1.2);
         }
-        .action-btn {
-            width: 70%;
+        to {
+          transform: scale(1, 1);
         }
-        .background {
-            position: absolute;
-            z-index: 1;
-            width: 100%;
+      }
+    }
+    h1,
+    h4 {
+      font-weight: 400;
+    }
+    .action-btn {
+      width: 70%;
+    }
+    .scroll-content {
+      overflow: hidden;
+    }
+    .swiper-pagination-bullet {
+      background: map-get($colors, light);
+    }
+    .swiper-pagination-bullet-active {
+      background: map-get($colors, primary);
+    }
+    ion-grid {
+      position: relative;
+      height: 100%;
+      ion-row {
+        &:nth-child(1) {
+          height: 40%;
+        }
+        &:nth-child(2) {
+          height: 45%;
+        }
+        &:nth-child(3) {
+          height: 15%;
+        }
+        ion-col {
+          height: 100%;
+          .slides {
             height: 100%;
-            background-color: black;
-            background-size: cover;
-            background-position: center center;
-            background-repeat: no-repeat;
-            @include vendor-prefix('transition', background-image 0.2s linear);
-            @include vendor-prefix('filter', brightness(50%) grayscale(10%));
-            @include animation(move, 15s, infinite, linear, alternate-reverse);
-            will-change: transform;
-            &.image1 {
-                background-image: url(../../assets/imgs/login/img1.png);
-            }
-            &.image2 {
-                background-image: url(../../assets/imgs/login/img1.1.jpeg);
-            }
-            &.image3 {
-                background-image: url(../../assets/imgs/login/img1.2.jpeg);
-            }
-            @include keyframe(move) {
-                from {
-                    transform: scale(1.2, 1.2);
-                }
-                to {
-                    transform: scale(1, 1);
-                }
-            }
-        }
-        .scroll-content {
-            overflow: hidden;
-        }
-        .slide-icon {
-            height: 100px;
-            width: 100px;
-        }
-        .slide-zoom {
-            width: 90%;
-        }
-        .swiper-pagination-bullet {
-            background: map-get($colors, light);
-        }
-        .swiper-pagination-bullet-active {
-            background: map-get($colors, primary);
-        }
-        ion-grid {
-            position: absolute;
-            z-index: 2;
+          }
+          .slide-zoom {
+            width: 95%;
             height: 100%;
-            ion-row {
-                ion-col {
-                    height: 100%;
-                }
-                &:nth-child(1) {
-                    height: 85%;
-                }
-                &:nth-child(2) {
-                    height: 15%;
-                }
-            }
+          }
+          .slide-icon {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto auto 0 auto;
+            height: 135px;
+            width: 135px;
+          }
         }
+      }
     }
+  }
 }
