--- a/src/theme/gradients.scss
+++ b/src/theme/gradients.scss
@@ -333,6 +333,8 @@ $minimal-red: #f00000 , #dc281e;
 
 $royal: #141e30 , #243b55;
 
+$royal-blue:#536976, #292e49;
+
 $mauve: #42275a , #734b6d;
 
 $frost: #000428 , #004e92;
